--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.0"
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/rss": "^4.0.12",
+    "astro": "^5.9.0",
+    "typescript": "^5.8.3"
   }
 }
