--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.9.0",
     "typescript": "^5.8.3"
   },
