--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.10.0",
+    "rehype-external-links": "^3.0.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
